--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /build
-/fabric.properties
+*.iml
+*.properties
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
